basic work with div's

--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
 </head>
 
 <body>
+
+
+
+<div class="block" id="header">
+</div>
+
+
+<div class="block" id="main">
+<div id="left"></div>
+<div id="middle"></div>
+<div id="right"></div>
+</div>
+
+
+<div class="block" id="footer">
+</div>
+
   
 </body>
 </html>
