Almost ready index.html

--- a/index.html
+++ b/index.html
@@ -18,17 +18,43 @@
 
 
 <div class="block" id="header">
+Необходимо выполнить вход в систему.  
 </div>
 
 
 <div class="block" id="main">
-<div id="left"></div>
-<div id="middle"></div>
-<div id="right"></div>
+	<div id="left"></div>
+	<div id="middle">
+		<div class="login">
+			<div id="align_login_right">
+				<label>Логин:</label>
+				<br>
+				<label id="pass">Пароль:</label>
+				<label>Запомнить:</label>
+			</div>
+			<div id="align_login_left">
+				<input type="text" id="username">  
+    			<br>
+  				<input type="password" id="password">  
+  				<br>
+  				<input type="checkbox" checked>
+  				<br>
+  				<input type="submit" value="Войти">
+			</div>
+		</div>
+	</div>	
+	<div id="right">
+		<b>Статистика:</b> <br>
+		Пользователей: 123 <br>
+		Файлов: 1234<br>
+		Объем: 2345 Mb <br>
+		Объем / польз.: 45 Mb
+	</div>
 </div>
 
 
 <div class="block" id="footer">
+©2014, EPAM RD PHP Training
 </div>
 
   
