Index ready.html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
 
 <body>
 
+<div class="block" id="super_header">
+	<label id="super_header">
+		<img src="folder.jpg" alt="No_image">
+		Файловое хранилище v 0.01 (потеряй свои файлы красиво! ;))
+		<img src="folder.jpg" alt="No_image">
+	</label>
+</div>
 
 
 <div class="block" id="header">
-Необходимо выполнить вход в систему.  
+Необходимо выполнить вход в систему.&nbsp;&nbsp;
 </div>
 
 
@@ -44,11 +51,11 @@
 		</div>
 	</div>	
 	<div id="right">
-		<b>Статистика:</b> <br>
-		Пользователей: 123 <br>
-		Файлов: 1234<br>
-		Объем: 2345 Mb <br>
-		Объем / польз.: 45 Mb
+		<label id="statistic"><b>Статистика:</b> <br></label>
+		<label id="statistic">Пользователей: 123 <br></label>
+		<label id="statistic">Файлов: 1234<br></label>
+		<label id="statistic">Объем: 2345 Mb <br></label>
+		<label id="statistic">Объем / польз.: 45 Mb</label>
 	</div>
 </div>
 
