All ready to show

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   				<br>
   				<input type="checkbox" checked>
   				<br>
-  				<input type="submit" value="Войти">
+  				<a href="logged_user.html"><input type="submit" value="Войти"></a>
 			</div>
 		</div>
 	</div>	
