--- a/logged_user.html
+++ b/logged_user.html
@@ -14,6 +14,81 @@
 </head>
 
 <body>
+
+<div class="block" id="super_header">
+	<label id="super_header">
+		<img src="folder.jpg" alt="No_image">
+		Файловое хранилище v 0.01 (потеряй свои файлы красиво! ;))
+		<img src="folder.jpg" alt="No_image">
+	</label>
+</div>
+
+
+<div class="block" id="header">
+Вы вошли в систему как <b>Иванов Иван Иванович.</b>
+<a href="index.html">Выйти.</a>&nbsp;&nbsp;
+</div>
+
+
+<div class="block" id="main">
+	<div id="left">
+		<label id="statistic"><b>Можно загружать:</b> <br></label>
+		<label id="statistic">ZIP: (до 20 Mb);<br></label>
+		<label id="statistic">DOCX (до 40 Mb);<br></label>
+		<label id="statistic">PPTX (до 50 Mb);<br></label>
+		<label id="statistic"><b>Использовано</b><br></label>
+		<label id="statistic">27.34 Mb из 100.00 Mb<br></label>
+	</div>
+	<div id="middle">
+		 <table>
+  			<tr id="td_top">
+    			<td>Файл</td>
+    			<td id="td_second">Размер (Kb)</td>
+    			<td id="td_third">Дата и время</td>
+    			<td id="td_fourth">Удалить</td>
+  			</tr>
+  			<tr>
+    			<td><a href="">Этот архив с русским именем.zip</a></td>
+    			<td>132.22</td>
+    			<td>2014.02.28 18:01:15</td>
+    			<td><a href="">Удалить</a></td>
+  			</tr>
+  			<tr>
+    			<td><a href="">_www_app.zip</a></td>
+    			<td>132.45</td>
+    			<td>2014.02.28 18:24:54</td>
+    			<td><a href="">Удалить</a></td>
+  			</tr>
+		</table> 
+		<div class="frame">
+				<label>Загрузить новый файл:</label><br>
+				<input id="input" type="button" value="Выбрать">  
+				<input id="line1" type="text">
+    			<br>
+  				<input id="input" type="submit" value="Загрузить">
+		</div>
+		<div class="frame">
+				<label>Запросить с удаленного сервера:</label><br>
+				<input id="line2" type="text"><br>
+				<label>Поместить в хранилище:</label>
+				<input type="checkbox" checked><br>
+  				<input id="input" type="submit" value="Запросить">
+		</div>
+	</div>	
+	<div id="right">
+		<label id="statistic"><b>Статистика:</b> <br></label>
+		<label id="statistic">Пользователей: 123 <br></label>
+		<label id="statistic">Файлов: 1234<br></label>
+		<label id="statistic">Объем: 2345 Mb <br></label>
+		<label id="statistic">Объем / польз.: 45 Mb</label>
+	</div>
+</div>
+
+
+<div class="block" id="footer">
+©2014, EPAM RD PHP Training
+</div>
+
   
 </body>
 </html>
