--- a/logged_user.html
+++ b/logged_user.html
@@ -48,13 +48,13 @@
     			<td id="td_fourth">Удалить</td>
   			</tr>
   			<tr>
-    			<td><a href="">Этот архив с русским именем.zip</a></td>
+    			<td class="td_left"><a href="">Этот архив с русским именем.zip</a></td>
     			<td>132.22</td>
     			<td>2014.02.28 18:01:15</td>
     			<td><a href="">Удалить</a></td>
   			</tr>
   			<tr>
-    			<td><a href="">_www_app.zip</a></td>
+    			<td class="td_left"><a href="">_www_app.zip</a></td>
     			<td>132.45</td>
     			<td>2014.02.28 18:24:54</td>
     			<td><a href="">Удалить</a></td>
